# Progetto_Scacchi_finale

./: CMakeLists.txt  Partita pc pc.txt  Partita_giocatore_nero_contro_pc.txt  Partita_pc_pc.txt
ReplayScacchi/: Exception.cpp  Exception.h  Replay.cpp  Replay.h  Scacchi_Replay.cpp
Scacchi/: Alfiere.cpp  Alfiere.h  ChessBoard.cpp  Torre.cpp  Torre.h
